# todufit

./: .env.example  .env.test  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  Makefile  PLAN.md  Procfile  README.md  compose.yaml  config.dev.yaml  config.example.yaml  config.test.yaml  docker-compose.yml  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  cli-release.yml  release.yml  web-deploy.yml
.pi/skills/release/: SKILL.md
agents/commands/: integration-testing.md
agents/skills/cli-release/: SKILL.md
agents/skills/overmind-logs/: SKILL.md
agents/skills/react-form-fill/: SKILL.md
agents/skills/release/: SKILL.md
agents/skills/sync-setup/: SKILL.md
agents/skills/web-login/: SKILL.md
agents/skills/web-release/: SKILL.md
config/: server.yaml.example
docs/: ARCHITECTURE.md  AUTH.md  DATA-MODEL.md  IOS.md  SYNC-SERVER.md  WEB.md  new-design.md
docs/plans/: 00-overview.md  01-document-id.md  02-document-model.md  03-multi-doc-storage.md  04-remove-sqlite.md  05-identity-management.md  06-sync-changes.md  07-cli-commands.md
hack/: config.yaml  fit.db  shoreman.sh  test-auth-flow.sh
integration-tests/: DISH-SYNC.md  MEALLOG-SYNC.md  MEALPLAN-SYNC.md  SHOPPING-SYNC.md
migrations/: 20251230000001_initial_schema.sql  20251230000002_mealplans.sql  20251230000003_meallogs.sql
src/: config.rs  lib.rs  main.rs
src/commands/: auth.rs  config_cmd.rs  dish.rs  meal.rs  mealplan.rs  mod.rs  sync_cmd.rs
src/db/: meallog_repo.rs  mealplan_repo.rs  mod.rs
src/models/: dish.rs  meal_plan.rs  mod.rs  nutrient.rs
src/server/: email.rs  mod.rs  storage.rs  sync.rs  tokens.rs  users.rs
src/sync/: client.rs  dish_sync.rs  mod.rs  projection.rs  schema.rs  storage.rs
todu-fit-cli/: Cargo.toml
todu-fit-cli/src/: config.rs  main.rs
todu-fit-cli/src/commands/: auth.rs  config_cmd.rs  device.rs  dish.rs  group.rs  init.rs  meal.rs  mealplan.rs  mod.rs  shopping.rs  sync_cmd.rs
todu-fit-cli/src/db/: dish_repo.rs  meallog_repo.rs  mealplan_repo.rs  mod.rs
todu-fit-cli/src/models/: ingredient.rs  mod.rs
todu-fit-cli/src/sync/: auto_sync.rs  client.rs  dish_sync.rs  group_context.rs  meallog_sync.rs  mealplan_sync.rs  mod.rs  projection.rs  reader.rs  schema.rs  shopping_sync.rs  storage.rs  writer.rs
todu-fit-core/: Cargo.toml
todu-fit-core/src/: document_id.rs  identity.rs  lib.rs
todu-fit-core/src/automerge/: doc_type.rs  mod.rs  multi_storage.rs  storage.rs  writer.rs
todu-fit-core/src/documents/: group.rs  identity.rs  mod.rs
todu-fit-core/src/models/: dish.rs  meal_log.rs  meal_plan.rs  meal_type.rs  mod.rs  shopping_cart.rs
todu-fit-core/src/sync/: client.rs  error.rs  mod.rs  protocol.rs
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  drizzle.config.ts  index.html  package-lock.json  package.json  server.ts  tsconfig.server.json  vite.config.ts
web/docs/: plan-01-auth.md  plan-02-identity-onboarding.md  plan-03-repo-bootstrap.md  plan-04-sync-proxy.md  plan-05-cleanup.md  refactor.md
web/server/db/: index.ts  schema.ts
web/server/db/migrations/: 0000_jittery_silver_samurai.sql  0001_nervous_lester.sql  0002_tiresome_skin.sql
web/server/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
web/server/lib/: automerge.ts  email.ts  icalendar.ts  session.ts
web/server/middleware/: session.ts
web/server/routes/: auth.ts  calendar.ts  passkey.ts
web/src/: App.tsx  index.css
web/src/auth/: AllowlistAdmin.tsx  AuthContext.tsx  IdentitySetup.tsx  InviteError.tsx  InviteSuccess.tsx  Login.tsx  PasskeyLogin.tsx  PasskeyRegister.tsx  ProtectedRoute.tsx  api.ts  index.ts  types.ts
web/src/calendar/: CalendarSubscription.tsx  api.ts  index.ts
web/src/components/: ConfirmDialog.tsx  Markdown.tsx  index.ts
web/src/dishes/: DishDetail.tsx  DishForm.tsx  DishList.tsx  index.ts  types.ts  useDishes.ts
web/src/meals/: DayView.tsx  DishSelector.tsx  MealCalendar.tsx  MealLogForm.tsx  MealLogList.tsx  MealPlanForm.tsx  ShoppingCart.tsx  index.ts  types.ts  useMealLogs.ts  useMealPlans.ts  useShoppingCart.ts
web/src/repo/: RepoContext.tsx  RepoStatus.tsx  index.ts  useDocument.ts
web/src/theme/: ThemeContext.tsx
