[package]
name = "todufit"
version = "0.5.0"
edition = "2021"

[dependencies]
automerge = "0.7"
clap = { version = "4", features = ["derive"] }
dirs = "5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
