[package]
name = "todufit"
version = "0.6.0"
edition = "2021"

[dependencies]
automerge = "0.7"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "todufit"
path = "src/main.rs"

[[bin]]
name = "todufit-server"
path = "src/bin/server.rs"
