[package]
name = "todu-fit-cli"
version = "2.4.0"
edition = "2021"

[dependencies]
todu-fit-core = { path = "../todu-fit-core" }
automerge = "0.7"
axum = "0.8"  # Used for local callback server in auth
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "fit"
path = "src/main.rs"
