[package]
name = "todu-fit-core"
version = "0.9.0"
edition = "2021"
description = "Core library for Todu Fit - shared models and sync logic"

[dependencies]
automerge = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
