[package]
name = "todu-fit-core"
version = "1.0.2"
edition = "2021"
description = "Core library for Todu Fit - shared models and sync logic"

[dependencies]
automerge = "0.7"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
